Closed
Bug 666510
Opened 14 years ago
Closed 14 years ago
the binary distribution of xulrunner 5.0 doesn't correctly work on mac os x
Categories
(Toolkit Graveyard :: XULRunner, defect)
Tracking
(firefox6 fixed)
RESOLVED
FIXED
mozilla6
Tracking | Status | |
---|---|---|
firefox6 | --- | fixed |
People
(Reporter: passfree, Assigned: matthew.gertner)
Details
Attachments
(1 file)
1.98 KB,
patch
|
benjamin
:
review+
asa
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_6_7) AppleWebKit/535.1 (KHTML, like Gecko) Chrome/14.0.797.0 Safari/535.1
Build Identifier: Xulrunner 5.0 binary distribution doesn't work
I just downloaded Xulrunner 5.0 and tried to run it the same way as usual on Mac OS X. Unfortunately, I get the following problems:
* if xulrunner is launched within the app bundle MaOS folder the following error is generated: "Could not find the Mozilla runtime." The app
bundle is structured correctly and it works fine under xulrunner 2.0.
* if xulrunner-bin is launched with the path to the ini file, i.e. Frameworks/XUL.framework/xulrunner-bin --app Resources/
application.ini, the following error is generated: "Error: unrecognized application.ini path." This works fine under xulrunner
2.0.
Keep in mind that I am only swapping the Framework/XUL.framework sym link which used to point to xulrunner2.0 to xulrunner5.0. This sort of
thing worked so far until and including the latest xulrunner 2.0.
Am I missing an important change or is the binary package broken?
Reproducible: Always
Steps to Reproduce:
See above.
Actual Results:
The app doesn't launch.
Expected Results:
The app should launch.
Comment 1•14 years ago
|
||
Matt, I think this is the one we talked about on IRC today.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•14 years ago
|
Component: General → XULRunner
Product: Core → Toolkit
QA Contact: general → xulrunner
Assignee | ||
Updated•14 years ago
|
Assignee: nobody → matthew.gertner
Assignee | ||
Comment 2•14 years ago
|
||
Attachment #542154 -
Flags: review?(benjamin)
Assignee | ||
Comment 3•14 years ago
|
||
I should mention that when I built 5.0, the dist/XUL.Framework directly didn't have very much in it (NSPR and other DLLs were missing). I'm not sure if this is another bug or by design. When I copied the whole dist/bin directory into XUL.Framework in my app bundle it worked fine.
Status: NEW → ASSIGNED
Updated•14 years ago
|
Attachment #542154 -
Flags: review?(benjamin) → review+
Assignee | ||
Comment 4•14 years ago
|
||
What's the next step to get this landed?
Updated•14 years ago
|
Keywords: checkin-needed
Comment 5•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla7
Should we be landing this for 6?
Comment 7•14 years ago
|
||
Comment on attachment 542154 [details] [diff] [review]
Move the code for OS X app bundles from GRE_GetGREPathWithProperties to stub
Yeah, we should take this on beta: it's not part of the Firefox build at all, but we do build XR builds from the branches and this is a bit embarrassing.
Attachment #542154 -
Flags: approval-mozilla-beta?
Comment 8•14 years ago
|
||
Comment on attachment 542154 [details] [diff] [review]
Move the code for OS X app bundles from GRE_GetGREPathWithProperties to stub
(I'm lone-gunning this one as important and NPOTB. Hope other drivers are OK with that.)
Attachment #542154 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
![]() |
||
Comment 9•14 years ago
|
||
status-firefox6:
--- → fixed
Updated•14 years ago
|
Target Milestone: mozilla7 → mozilla6
Updated•10 years ago
|
Product: Toolkit → Toolkit Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•