Bug 666510 - Move the code for OS X app bundles from GRE_GetGREPathWithProperties to stub. r=bsmedberg